# sql_notes

./: .gitignore  README.md  pyproject.toml
dbs_docker/: docker-compose.yaml
examples/: 11_stored_functions.sql  12_procedures.sql  13_rollup.sql  14_triggers.sql  15_events.sql  16_window.sql  4_delete.sql  5_Joins.sql  6_joins.sql  7_CTE.sql  8_some_stuff.sql  8_views.sql  9_view_dml.sql  9_viewv_dml.sql  basic_select.sql  update_.sql
heros_sql/: heroes_of_endles_war_cha2.ipynb  heros_of_endles_war_ch1.ipynb
sakila_python/: from_excel_to_sql.py  report.xlsx  sakila_films.xlsx  sql_and_request.py  sql_to_ecxel_2.py  sql_to_excel.py  sqlalchemy_example_1.py  sqlalchemy_example_2.py  sqlalchemy_example_3_orm.py  sqlalchemy_example_4_generate_table.py  sqlalchemy_example_4_sakila_conn.py  sqllite3_example.py  yolo.db  yolo2.db  yolo3.db  yolo4.db
